testcrate/tests/ui/parse.stderr
error: failed to parse expression: failed to parse all tokens
  --> $DIR/parse.rs:45:5
   |
45 |     sql!(Table.filter(field1 in "value1"));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

